Error.log
[PrimeTest.java:17: error: cannot find symbol
 assertTrue("wrong result isPrime("+tmp+")",Prime.isPrime(tmp));  
                                                 ^
  symbol:   method isPrime(int)
  location: class Prime, PrimeTest.java:19: error: cannot find symbol
   assertFalse("wrong result isPrime("+tmp+")",Prime.isPrime(tmp));
                                                    ^
  symbol:   method isPrime(int)
  location: class Prime, PrimeTest.java:20: error: cannot find symbol
        assertTrue("wrong result isPrime(2)",Prime.isPrime(2));
                                                  ^
  symbol:   method isPrime(int)
  location: class Prime, PrimeTest.java:21: error: cannot find symbol
        assertTrue("wrong result isPrime(13)",Prime.isPrime(13));
                                                   ^
  symbol:   method isPrime(int)
  location: class Prime, PrimeTest.java:22: error: cannot find symbol
        assertTrue("wrong result isPrime(1009)",Prime.isPrime(1009));
                                                     ^
  symbol:   method isPrime(int)
  location: class Prime, PrimeTest.java:24: error: cannot find symbol
        assertFalse("wrong result isPrime(1)",Prime.isPrime(1));
                                                   ^
  symbol:   method isPrime(int)
  location: class Prime, PrimeTest.java:25: error: cannot find symbol
        assertFalse("wrong result isPrime(128)",Prime.isPrime(128));
                                                     ^
  symbol:   method isPrime(int)
  location: class Prime, PrimeTest.java:31: error: cannot find symbol
        assertEquals("nextPrime("+tmp+")",myNextPrime(tmp),Prime.nextPrime(tmp));
                                                                ^
  symbol:   method nextPrime(int)
  location: class Prime, PrimeTest.java:32: error: cannot find symbol
        assertEquals("nextPrime(13)",13,Prime.nextPrime(13));
                                             ^
  symbol:   method nextPrime(int)
  location: class Prime, PrimeTest.java:33: error: cannot find symbol
        assertEquals("nextPrime(655)",659,Prime.nextPrime(655));
                                               ^
  symbol:   method nextPrime(int)
  location: class Prime, PrimeTest.java:34: error: cannot find symbol
        assertEquals("nextPrime(2)",2,Prime.nextPrime(2));
                                           ^
  symbol:   method nextPrime(int)
  location: class Prime, PrimeTest.java:35: error: cannot find symbol
        assertEquals("nextPrime(1)",2,Prime.nextPrime(1));
                                           ^
  symbol:   method nextPrime(int)
  location: class Prime]